alignment issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ body {
 }
 
 .content-container{
+    text-align: center;
     margin: 0 10em;
 }
 
